# dope

./: Cargo.toml  README.md
example/: awesome  awesome.config  awesome.config.preprocessed  great.conf~alacritty  preprocessor.toml
src/: command.rs  command_reader.rs  env.rs  error.rs  helper.rs  logging.rs  main.rs  parser.rs
src/config/: file_config.rs  mod.rs
